@@ -1,3 +1,9 @@
+2011-01-22 Németh László <nemeth at OOo>:
+	* affixmgr.*, suggestmgr.*: new features
+	  ONLYMAXDIFF: remove all bad ngram suggestions (default mode keeps one)
+	  NONGRAMSUGGEST: similar to NOSUGGEST, but it forbids to use the word
+          in ngram based (more, than 1-character distance) suggestions.
+
 2011-01-21 Németh László <nemeth at OOo>:
 	* suggestmgr.*: limit wild suggestions (hun#2970237 by Ruud Baars)
 	- limited compound word suggestions
